--- a/_mixin.scss
+++ b/_mixin.scss
@@ -10,9 +10,11 @@
 
   @keyframes animation {
     0% {
-      top: -90vh;
-    }
-    100% {
-      top: 0vh;
-    }
-  }
+      left: -100;
+      
+     }
+     100% {
+       right: 0;
+      
+     }
+   }
