--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
   right: -150vh;
   justify-content: center;
   animation-name: animation;
-  animation-duration: 2s;
+  animation-duration: 1.5s;
   animation-fill-mode: forwards;
   animation-timing-function: ease-in;
   font-size: 10vw;
@@ -52,12 +52,20 @@
 
 .f2 {
   background-color: rgba(255, 0, 0, 0.5);
-  animation-delay: 4s;
+  animation-delay: 3.5s;
 }
 
 .f3 {
   background-color: rgba(248, 252, 0, 0.5);
-  animation-delay: 6s;
+  animation-delay: 5s;
+}
+
+@media only screen and (max-width: 620px) {
+  .tara {
+    font-size: 18vw;
+    height: 20%;
+    width: 50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
